--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -7,11 +7,12 @@
         <link rel="stylesheet" href="{% static 'custom.min.css' %}" />
     </head>
     <body>
-    <div class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+    <!--<div class="navbar navbar-expand-lg fixed-top navbar-light bg-light">-->
         <div class="container">
             <a href="{% url 'root' %}" class="navbar-brand">Azure Paas와 함께 인프라 스트레스없는 배포하기</a>
         </div>
-    </div>
+        <hr>
+    <!--</div>-->
 
     {% block content %}
     {% endblock %}
